# stick_steam_emu-base

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md
include/steamworks_sdk/: isteamapplist.h  isteamapps.h  isteamappticket.h  isteamclient.h  isteamcontroller.h  isteamfriends.h  isteamgamecoordinator.h  isteamgameserver.h  isteamgameserverstats.h  isteamhtmlsurface.h  isteamhttp.h  isteaminput.h  isteaminventory.h  isteammatchmaking.h  isteammusic.h  isteammusicremote.h  isteamnetworking.h  isteamnetworkingmessages.h  isteamnetworkingsockets.h  isteamnetworkingutils.h  isteamparentalsettings.h  isteamremoteplay.h  isteamremotestorage.h  isteamscreenshots.h  isteamugc.h  isteamuser.h  isteamuserstats.h  isteamutils.h  isteamvideo.h  matchmakingtypes.h  steam_api.h  steam_api.json  steam_api_common.h  steam_api_flat.h  steam_api_internal.h  steam_gameserver.h  steamclientpublic.h  steamencryptedappticket.h  steamhttpenums.h  steamnetworkingfakeip.h  (+3 more)
source/: common.cpp  common.hpp  library.cpp  library.hpp  steam_api.cpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_encrypted_app_ticket.cpp  steam_gameserver.cpp
source/interfaces/: AppList.cpp  AppList.hpp  AppTicket.cpp  AppTicket.hpp  Apps.cpp  Apps.hpp  Client.cpp  Client.hpp  Controller.cpp  Controller.hpp  Friends.cpp  Friends.hpp  GameCoordinator.cpp  GameCoordinator.hpp  GameServer.cpp  GameServer.hpp  GameServerStats.cpp  GameServerStats.hpp  HTMLSurface.cpp  HTMLSurface.hpp  HTTP.cpp  HTTP.hpp  Input.cpp  Input.hpp  Inventory.cpp  Inventory.hpp  Matchmaking.cpp  Matchmaking.hpp  Music.cpp  Music.hpp  MusicRemote.cpp  MusicRemote.hpp  Networking.cpp  Networking.hpp  NetworkingMessages.cpp  NetworkingMessages.hpp  NetworkingSockets.cpp  NetworkingSockets.hpp  NetworkingUtils.cpp  NetworkingUtils.hpp  (+18 more)
source/logger/: logger.cpp  logger.hpp
